objects/LAT_BR_TAAAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Accompaniment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompaniment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Items__c</fullName>
        <label>Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TAA__c</fullName>
        <label>TAA</label>
        <referenceTo>LAT_BR_TAA__c</referenceTo>
        <relationshipLabel>Acordos</relationshipLabel>
        <relationshipName>TAA_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>toDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Delete</label>
        <type>Checkbox</type>
    </fields>
    <label>Acordo</label>
    <nameField>
        <displayFormat>TAG-{0000}</displayFormat>
        <label>Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAA Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>